<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/m_bg"
    tools:context=".activity.DoctorInfoActivity">

    <RelativeLayout
        android:id="@+id/doctor_title_layout"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/doctor_back"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="20dp"
            android:src="@drawable/back_left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="医生信息管理"
            android:textColor="#ffffff"
            android:textSize="40sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/doctor_btn_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/doctor_title_layout"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/info_bg"
        android:gravity="center_vertical">

        <LinearLayout
            android:id="@+id/doctor_query_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/doctor_id_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:background="@drawable/info_id_white"
                android:ems="9"
                android:hint="医生工作证"
                android:maxLength="18"
                android:paddingLeft="10dp"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/doctor_name_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:background="@drawable/info_name_white"
                android:ems="5"
                android:hint="医生姓名"
                android:maxLength="5"
                android:paddingLeft="10dp"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/doctor_query_btn"
                style="@style/button_big"
                android:layout_marginLeft="35dp"
                android:text="@string/info_query" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/doctor_query_layout"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/doctor_add_btn"
                style="@style/button_big"
                android:layout_marginLeft="15dp"
                android:text="@string/info_add" />

            <TextView
                android:id="@+id/doctor_update_btn"
                style="@style/button_big"
                android:layout_marginLeft="35dp"
                android:text="@string/info_update" />

            <TextView
                android:id="@+id/doctor_del_btn"
                style="@style/button_big"
                android:layout_marginLeft="35dp"
                android:text="@string/info_del" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/user_info_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/doctor_btn_layout"
        android:layout_marginTop="10dp"
        android:background="#00000000">

        <LinearLayout
            android:id="@+id/title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:src="@drawable/info_k" />

            <TextView
                android:id="@+id/item_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@drawable/info_id"
                android:gravity="center"
                android:text="@string/workId"
                android:textColor="@color/White"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@drawable/info_name"
                android:gravity="center"
                android:text="@string/name"
                android:textColor="@color/White"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/item_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@drawable/info_sex"
                android:gravity="center"
                android:text="@string/sex"
                android:textColor="@color/White"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/item_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/info_sex"
                android:gravity="center"
                android:text="@string/age"
                android:textColor="@color/White"
                android:textSize="22sp" />
        </LinearLayout>


        <ListView
            android:id="@+id/doctor_info_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_layout"
            android:layout_marginTop="4dp"
            android:divider="#00000000"
            android:paddingBottom="40dp"
            android:scrollbars="none">

        </ListView>

    </RelativeLayout>
</RelativeLayout>