<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/m_bg"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:text="@string/name"
            android:textColor="@color/White"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/m_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:background="@drawable/m_name"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:text="@string/sex"
            android:textColor="@color/White"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/m_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:background="@drawable/m_sex" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:text="@string/age"
            android:textColor="@color/White"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/m_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:background="@drawable/m_age" />

        <Button
            android:id="@+id/m_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="扫描"
            android:textColor="@color/White"
            android:textSize="25sp" />
    </LinearLayout>
    <android.support.v4.view.ViewPager
        android:id="@+id/data_pager"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content">

    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/m_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:background="@drawable/m_button"
            android:text="保    存"
            android:textColor="@color/White"
            android:textSize="25sp" />

        <Button
            android:id="@+id/m_user_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:background="@drawable/m_button"
            android:text="用户管理"
            android:textColor="@color/White"
            android:textSize="25sp" />

        <Button
            android:id="@+id/m_test_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:background="@drawable/m_button"
            android:text="报告管理"
            android:textColor="@color/White"
            android:textSize="25sp" />

        <Button
            android:id="@+id/m_sys_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/m_button"
            android:text="系统设置"
            android:textColor="@color/White"
            android:textSize="25sp" />
    </LinearLayout>

</LinearLayout>